fixes scrolling issue on mobile menu.

--- a/Themes/default/css/responsive.css
+++ b/Themes/default/css/responsive.css
@@ -17,6 +17,8 @@
 	.popup_window {
 		width: 90%;
 		min-height: 285px !important;
+		max-height: 5em;
+		overflow: scroll !important;
 		padding: 0;
 		margin: 0 auto;
 	}
